JH request indicate day activities in month view ala Apple with red circle background, fix positioning issue on mobile webkit (Android)

--- a/content/css/app.css
+++ b/content/css/app.css
@@ -599,16 +599,22 @@ li[data-opportunity-status="Closed - Lost"] .list-item-selector
 }
 
 /* in Month view .activeDay indicates individual events */
-.calendar-day.activeDay {
-    color: #c00 !important;
+.calendar-day.activeDay div {
     position: relative; /* support positioning of span.activity-count */
 }
 .calendar-day.activeDay span.activity-count {
     visibility: visible; /* flip visibility 'visible/hidden' */
-    position: absolute; top:0.5em; right:0.5em;
-    color:#000;
-    font-weight:normal;
-    font-size:65%;
+    position: absolute; top:-3.25em; right:-1.25em;
+    padding: 0.25em 0.5em;
+    border: 2px #fff solid;
+    border-radius: 1.5em;
+    color:#fff;
+    font-size:80%;
+    background-color: #e33;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#fcc), to(#e33));
+    background-image: linear-gradient(top, #fcc, #e33);
+    background-image: -moz-linear-gradient(top, #fcc, #e33);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#fcc, endColorstr=#e33)";
 }
 
 .collapsed-indicator
